--- a/gb/ncid283_10.md
+++ b/gb/ncid283_10.md
@@ -1,4 +1,14 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/asdfghy6/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/asdfghy6/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/asdfghy6/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/asdfghy6/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/asdfghy6/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/asdfghy6/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/asdfghy6/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/asdfghy6/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/10.jpg" title="购物"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="https://git.io/fjHxp" rel="nofollow">大纪元</a> | <a href="https://git.io/fjHxh" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="https://git.io/fjHpJ" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="https://git.io/fjHpk" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="https://git.io/fjHpL" rel="nofollow">看中国</a> | <a href="https://git.io/fjHpt" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="https://git.io/fjHpm" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="https://git.io/fjHpO" rel="nofollow">新唐人</a> | <a href="https://git.io/fjHps" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>中国经济</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/asdfghy6/yh/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/15/5/5/n4427238.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/9/10/15/n2689419.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/asdfghy6/fq/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/8/31/n11489772.md#1" target="_blank">营收大降74.75% 乐视网上半年亏损超百亿</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/8/31/n11489772.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/12/4f2da05c08ce0f05c579d2ead24567f4-600x400-150x120.jpg" align ="left"></a>乐视网8月29日晚间公布了上半年财报，财报显示乐视网上半年净利润亏损100.46亿元（人民币，下同），而在此之前，乐视网预计亏损不超过3.66亿元。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月31日 6:51 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/8/31/n11489364.md#1" target="_blank">人民币兑美元8月贬值3.63% 创25年最大跌幅</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/8/31/n11489364.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/10/GettyImages-1013061576-150x120.jpg" align ="left"></a>人民币兑美元在岸价8月份累计贬值3.63%，创下了25年来最大单月跌幅，同时，反应中共官方态度的人民币中间价也累计贬值了2.88%。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月31日 4:12 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/8/29/n11484656.md#1" target="_blank">川普确认9月1日加税15% 哪些中国商品受影响</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/8/29/n11484656.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/08/GettyImages-1053163368-150x120.jpg" align ="left"></a>美国贸易代表办公室（USTR）在8月28日正式通知中表示，将于美国东部时间9月1日凌晨12:01（格林威治标准时间0401）开始对超过1250亿美元中国进口商品征收15%关税。这是剩下3000亿美元中国商品的一部分。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月31日 2:40 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/8/30/n11489090.md#1" target="_blank">专访班农：华为如何威胁西方国家（二）</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/8/30/n11489090.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/08/EET-Interview-Steve-Bannon-600x400-1-150x120.jpg" align ="left"></a>英文大纪元资深记者扬?杰基莱克（Jan Jekielek）在 《美国思想领袖》（American Thought Leader）系列节目中，就华为公司等问题，专访了前白宫首席策略师、前布莱巴特新闻执行主席史蒂夫?班农。此文为采访第二部分。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月31日 6:42 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/8/30/n11488988.md#1" target="_blank">美缴获来自中国芬太尼 数量可杀1400万人</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/8/30/n11488988.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/06/e86864db13e4587ea500226dcb126a35-150x120.jpg" align ="left"></a>弗吉尼亚州（Virginia）的执法官员周四（8月29日）表示，破获一个于美国多州贩毒的团伙，并缴获了大量的来自中国的廉价芬太尼，其数量足以杀死1400万人。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月31日 3:23 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/8/30/n11488206.md#1" target="_blank">贸战冲击 美时尚品牌A&#038;F降低中国制造依赖</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/8/30/n11488206.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/08/bbd30fde7be12924ebfbffeeec020d66-150x120.jpg" align ="left"></a>美中贸易战让越多的国际品牌撤出中国，如今美国时尚品牌A& F（Abercrombie& Fitch）也传出将降低对中国制造的依赖程度，A& F强调，他们将降低对中国供应商的依赖程度，至少会下降四成以上。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月31日 2:53 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/8/30/n11488655.md#1" target="_blank">限制进口加非洲猪瘟 中国猪肉价年涨75%</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/8/30/n11488655.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/07/7bdf218da19d41086b5237d740651063-150x120.jpg" align ="left"></a>大陆猪肉价格直线攀升，8月已突破历史高点，比过去一年上涨近75％。在大陆非洲猪瘟疫情持续、北京将对美国进口猪肉征收72%关税的背景下，未来一段时间猪肉价格仍会保持在高位。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月31日 12:34 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/8/30/n11487869.md#1" target="_blank">欧盟：对中国自行车反倾销关税延长五年</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/8/30/n11487869.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/03/1903012234272378-150x120.jpg" align ="left"></a>欧盟8月29日在官方的公报中表示，对中国自行车征收的反倾销关税延长五年。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月30日 6:31 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/8/30/n11487407.md#1" target="_blank">营收净利双降 大陆七成上市车企业绩下滑</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/8/30/n11487407.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/02/bab501b070cc4150bed44f40e92fc8a0-150x120.jpg" align ="left"></a>截至8月29日晚，大陆171家上市车企中有152家发布了2019年中报，报告显示这些车企营业收入同比下降8.89%，净利润同比下降30.89%。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月30日 4:40 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/8/30/n11486814.md#1" target="_blank">人民币中间价罕见连续偏离即期汇率1%</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/8/30/n11486814.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/10/GettyImages-53269182-150x120.jpg" align ="left"></a>被视为反应中共官方态度的人民币中间价近来连续偏离人民币即期汇率，有业界人士表示，此举反应人民币中间价偏弱，不足以扭转人民币下跌趋势。也有观点认为，中共默许人民币贬值。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月30日 1:27 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/8/29/n11486613.md#1" target="_blank">美正阻止谷歌、脸书与中企合作海底光缆项目</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/8/29/n11486613.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/08/GettyImages-77470458-600x400-150x120.jpg" align ="left"></a>光缆一方面承担逾99%的国际通信，另一方面又容易受攻击。正因如此，光缆的安全越发备受关注。《华尔街日报》日前引述知情人士透露，美国官员正寻求阻止由谷歌、脸书和一家中企一起投资的一条海底光缆项目。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月30日 7:57 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/8/29/n11486447.md#1" target="_blank">美检察官正调查华为涉技术盗窃新案例</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/8/29/n11486447.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/04/1903161216212190-150x120.jpg" align ="left"></a>据知情人士透露，美国检察官正在调查华为技术公司涉嫌技术盗窃的更多案件，可能会扩大现有针对华为的刑事案件范围。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月30日 5:18 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/8/29/n11486192.md#1" target="_blank">川普：美中周四举行不同级别贸易会谈</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/8/29/n11486192.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/03/11bca54223134f935a07f7b99bc00696-150x120.jpg" align ="left"></a>川普（特朗普）总统周四（8月29日）在接受福克斯电台采访时再次强调，关税是其谈判的主要工具，并正在发挥作用。他表示，美中周四会举行不同级别的贸易会谈。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月30日 12:48 AM							</td></tr>
@@ -18,16 +28,6 @@
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/8/28/n11483100.md#1" target="_blank">中共从世银贷款迫害新疆人 美国会要求调查</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/8/28/n11483100.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2013/10/1310111658572192-150x120.jpg" align ="left"></a> 8月23日美国国会及行政当局中国委员会 （CECC）写给世界银行行长马尔帕斯 （David Malpass），强烈质疑该机构在2015年批准资助新疆“职业教育”的一项贷款。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月28日 6:55 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/8/28/n11482296.md#1" target="_blank">孩之宝CEO：将供应链移出中国不难</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/8/28/n11482296.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/08/000_1JP63B-150x120.jpg" align ="left"></a>周二（8月27日），著名的玩具制造商孩之宝（Hasbro）首席执行官布莱恩?戈德纳（Brian Goldner）表示，公司将业务从中国转移出去，对公司有利。针对川普要求美企离开中国，戈德纳表示并不能遵从。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月28日 12:28 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/8/27/n11481364.md#1" target="_blank">【新闻看点】刘鹤求和？G7峰会中共空前孤立</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/8/27/n11481364.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/07/a4bbc255a2fe837c11afb6cfe4cb0bfc-150x120.jpg" align ="left"></a>七个工业大国（G7）领导人昨天（8月26日）结束了峰会。在重点讨论了美中贸易战和香港问题之后，G7声明表示，各国间要团结，保持正向精神；显示站在美国和香港一边，中共被孤立。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月28日 3:59 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/8/27/n11481647.md#1" target="_blank">川普：一旦中国供应链破裂 很难再愈合</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/8/27/n11481647.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/08/GettyImages-1164184600-150x120.jpg" align ="left"></a>美国总统川普（特朗普）周一（8月26日）在法国举行的七国集团（G7）峰会新闻发布会上，针对中美贸易战回答了记者问题。川普强调中方应该达成协议，因为一旦供应链破裂，就很难再愈合，且越拖越糟糕。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月28日 3:35 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/8/27/n11481422.md#1" target="_blank">自救两次失败 昔日“中国鞋王”破产</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/8/27/n11481422.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/08/VCG11434479061-150x120.jpg" align ="left"></a>8月26日晚，一代“中国真皮鞋王”富贵鸟宣告公司破产。此前，香港联交所告知富贵鸟公司股份的最后上市日期为今年8月23日，股份上市地位于8月26日上午9时起取消。富贵鸟曾两度提交重整计划草案，均以失败告终。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月28日 12:58 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/8/27/n11480949.md#1" target="_blank">贸易战冲击 大陆25%运动服生产线闲置</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/8/27/n11480949.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2005/04/5041414371457-150x120.jpg" align ="left"></a>美中贸易战延烧下，国际运动品牌大厂纷撤出中国，据中国体育用品品牌制造商特步集团透露，现在的中国有高达1/4的运动服装生产线处于闲置状态；而台湾的运动鞋代工厂丰泰则决定在中国之外另辟产线，预计在越南设立新厂，并在2021年起开始生产。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月28日 12:14 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/8/27/n11481322.md#1" target="_blank">中共对美国原油加征关税 中石化先受冲击</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/8/27/n11481322.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2015/09/1203282233111758-150x120.jpg" align ="left"></a>中共上周宣布对美国商品加征报复性关税后，中石化等中共国企首先受到冲击。据外媒披露，中石化已计划为其9、10月份进口的800万桶美国原油寻求关税豁免。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月27日 11:33 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/8/27/n11480724.md#1" target="_blank">在岸人民币收市续创11年半新低</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/8/27/n11480724.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/10/GettyImages-53269182-150x120.jpg" align ="left"></a>今天（27日），在岸人民币（CNY）兑美元汇率收市报7.1670，续创11年半收市新低。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月27日 7:20 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/8/27/n11480766.md#1" target="_blank">美国防部：正与澳洲联手打造稀土供应链</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/8/27/n11480766.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/08/11-42-150x120.jpg" align ="left"></a>周一（8月26日），负责收购和维护的美国国防部副部长埃伦·洛德（Ellen Lord) 对媒体说，五角大楼“最有潜力的渠道”是与澳大利亚建立稀土加工设施，满足五角大楼和其他国际盟友的需求。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月27日 6:32 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/8/27/n11480356.md#1" target="_blank">7月份从香港流入大陆的黄金量减少42%</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/8/27/n11480356.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/10/GettyImages-56545309-150x120.jpg" align ="left"></a>香港政府统计处8月26日公布的数据显示，7月份由香港净流入中国大陆的黄金量按月大跌42.4%，仅为8,085公斤，这是路透社追踪该数据自2012年以来的最低水平。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月27日 5:36 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/8/27/n11480426.md#1" target="_blank">非洲猪瘟肆虐 中国猪肉进口料两年增加一倍</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/8/27/n11480426.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/02/d93940a30363e3bfe0dda9d7de3fdc94-150x120.jpg" align ="left"></a>经纪和咨询公司INTL FCStone周一（8月27日）预计，由于爆发非洲猪瘟，中国猪肉进口量将在截至2020年的两年增加一倍。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月27日 3:09 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/8/27/n11479866.md#1" target="_blank">传海航再卖海外资产40亿还债</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/8/27/n11479866.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/07/1803202337372662-150x120.jpg" align ="left"></a>中国海航集团日前再次传出出售海外资产套现40亿美元还债的消息。这是海航之前传出将于9月17日拍卖海南价值近13亿人民币的资产后，再次传出其出售旗下资产的消息。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月27日 2:22 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/8/28/n11483115.md#1" target="_blank">贸易战加上非洲猪瘟 中国进口美猪代价上升</a><br></h3>由于美中贸易战，再加上非洲猪瘟，导致今年中国猪价大涨，比去年同期贵了50%以上，进口需求大增，根据美国农业部数据显示，中国8月初向美国购买1.2万吨猪肉，创下近两个月新高。随着中国已宣布9月1日实施新关税，对美国进口猪肉额外征收10%关税，使得关税总税率高达72%。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月28日 11:13 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/8/27/n11480708.md#1" target="_blank">杨恒均间谍罪被捕 澳洲外长：非我国间谍</a><br></h3>澳大利亚政府确认，被中共扣押超过半年的澳大利亚籍华裔作家杨恒均（中共外交部称杨恒均的正式名字为“杨军”），被正式以间谍罪拘捕。周二（8月27日）澳大利亚马里斯·佩恩（Marise Payne）坚决表示，杨恒军不是澳大利亚间谍。“指控杨为澳大利亚政府进行间谍活动，没有任何依据。”佩恩告诉英国《卫报》。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月27日 5:43 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/ncid283_9.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/ncid283.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/ncid283_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/ncid283_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/ncid283_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/ncid283_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/ncid283_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/ncid283_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/ncid283_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/ncid283_9.md#1">9</a>&nbsp;&nbsp;10&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/ncid283_11.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/asdfghy6/djy/blob/master/gb/ncid283_10.md#1<br><a href="https://github.com/asdfghy6/djy/blob/master/gb/ncid283_10.md#1"><img src="http://www.hehaibao.com/qr/index.php?m=1&e=L&p=10&t=&d=https://github.com/asdfghy6/djy/blob/master/gb/ncid283_10.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/ncid283_10.htm">http://www.epochtimes.com/gb/ncid283_10.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
